--- a/example/index.html
+++ b/example/index.html
@@ -53,6 +53,7 @@
       `;
 
       const H2 = CustomTitle.withComponent("h2");
+      const H2Extended = { extends: H2 }
 
       const MyComponent = {
         props: ["visible"],
@@ -86,7 +87,7 @@
         background-color: ${(props) => props.bg};
       `;
 
-      const StyledInput = styled.default.input`
+      const StyledInput = styled.default('input')`
         display: block;
         width: 100%;
         height: 60px;
@@ -165,6 +166,7 @@
           tertiary: 'lavenderblush'
         }">
           <wrapper>
+            <h-2-extended>Oha!</h-2-extended>
             <custom-title :animate="animated1"> {{text1}} </custom-title>
             <styled-input :value="text1" @input="(e) => text1 = e.target.value" />
             <btn visible @click="animated1 = !animated1"> A Styled Button </btn>
@@ -200,6 +202,7 @@
           W2,
           W3,
           H2,
+          H2Extended,
           Btn,
           SuperBtn,
           CustomBtn,
